# GRVCopter

./: Bin2Mat.py  Grvcopter  Grvcopter.cpp  Grvcopter.h  README.md  grvcopterMAKE  plotter.m
Libraries/: Attitude  Attitude.cpp  Attitude.h  Attitude_Controller.cpp  Attitude_Controller.h  Bool_Upgraded.h  Common  Common.cpp  Common.h  Controller  Controller.cpp  Controller.h  Helper  Helper.h  Logger.h  Logger_Constants.h  Matriz3.h  Messages_GRVCopter  Messages_GRVCopter.cpp  Messages_GRVCopter.h  Mixer.h  Mixer_Physical.h  PID.h  Parameters  Parameters.h  ParametersList.carlos  Position.h  Position_Controller.cpp  Position_Controller.h  RC.h  UAV.h  UdpSocket  UdpSocket.h  Vector3.h  Wrench_Estimator.h
grvcopter_controller/: Bin2Mat.py  Grvcopter  Grvcopter.cpp  Grvcopter.h  Log_2023-04-10.16:12:32.mat  Log_2023-04-10.16:13:47.mat  Log_2023-04-10.16:13:47.txt  Log_2023-04-10.16:18:36.mat  Log_2023-04-10.16:18:36.txt  Log_2023-04-10.16:18:36Matlab.Mat  Log_2023-04-12.09:54:41.txt  Log_2023-04-12.09:54:41Matlab.Mat  Log_2023-04-12.10:49:40.txt  Log_2023-04-12.10:49:40Matlab.Mat  Log_2023-04-12.10:51:59.txt  Log_2023-04-12.10:51:59Matlab.Mat  Log_2023-04-12.10:54:57.txt  Log_2023-04-12.10:54:57Matlab.Mat  Log_2023-04-12.10:58:08.txt  Log_2023-04-12.10:58:08Matlab.Mat  Log_2023-04-12.16:44:20.txt  Log_2023-04-12.16:44:20Matlab.Mat  Log_2023-04-12.16:49:16.txt  Log_2023-04-12.16:49:16Matlab.Mat  Log_2023-04-12.16:53:29.txt  Log_2023-04-12.16:54:35.txt  (+19 more)
simulator_grvcopter/: CMakeLists.txt  Messages_GRVCopter.cpp  Messages_GRVCopter.h  sender.cc  simulator_grvcopter.cc
(+40 files in other folders)
